--- a/templates/pilot.html
+++ b/templates/pilot.html
@@ -87,7 +87,7 @@
                 <div>
                     <h3 class="color-blue">Graphical Summary</h3>
                     <div>
-                        <img src="../resources/temp/baseline_assessment.jpg" alt="Picture" id="spider">
+                        <img src="../tmp/baseline_assessment.jpg" alt="Picture" id="spider">
                     </div>
                 </div>
             </section>
@@ -150,7 +150,7 @@
                                 <h5>{{ skill|upper }}: HIGH</h5>
                             </div>
                             <div>
-                                <img src="../resources/temp/{{ skill }}.jpeg" alt="Picture">
+                                <img src="../tmp/{{ skill }}.jpeg" alt="Picture">
                             </div>
                         </div>
                         <div>
@@ -185,7 +185,7 @@
                                 <h5>{{ skill|upper }}: LOW</h5>
                             </div>
                             <div>
-                                <img src="../resources/temp/{{ skill }}.jpeg" alt="Picture">
+                                <img src="../tmp/{{ skill }}.jpeg" alt="Picture">
                             </div>
                         </div>
                         <div>
